Changed get all trips for specific user
